plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.13'
    id 'io.spring.dependency-management' version '1.1.7'
}

ext {
    springCloudVersion = "2025.0.2"
}

group = 'com.ft'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
    maven {
        name = 'GitHubPackages'
        url = uri('https://maven.pkg.github.com/jae9380/fintracking-common')
        credentials {
            username = System.getenv('GITHUB_ACTOR') ?: project.findProperty('gpr.user')
            password = System.getenv('GITHUB_TOKEN') ?: project.findProperty('gpr.token')
        }
    }
}

dependencies {
    // Common
    implementation 'com.ft:fintracking-common:1.0.7'

    // Thymeleaf 템플릿
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

    // Mail Sender
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // Eureka Client
    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'

    // Spring Cloud Config Client
    implementation 'org.springframework.cloud:spring-cloud-starter-config'
    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'

    // Java Mail Sender
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // Firebase
    implementation 'com.google.firebase:firebase-admin:9.2.0'

    // Kafka
    implementation 'org.springframework.kafka:spring-kafka'

    // PostgreSQL
    runtimeOnly 'org.postgresql:postgresql'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    //  Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // Spring Cloud Bus (RabbitMQ)
    implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'

    // Circuit Breaker (Resilience4J)
    implementation 'io.github.resilience4j:resilience4j-spring-boot3'
    implementation 'org.springframework.boot:spring-boot-starter-aop'

    //  Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.8'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    implementation 'org.springframework.boot:spring-boot-starter-web'

    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'com.h2database:h2'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:$springCloudVersion"
    }
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs '-XX:+EnableDynamicAgentLoading'
}